--- a/django_project/sunlumo_mapserver/templates/mapview.html
+++ b/django_project/sunlumo_mapserver/templates/mapview.html
@@ -2,18 +2,26 @@
 
 {% block content %}
 
-<div id='map' style="width:800px; height:800px"></div>
+<div id='map'></div>
 
 {% endblock %}
 
 {% block extra_js %}
 <script>
-var map = L.map('map').setView([51.505, -0.09], 13);
+var map = L.map('map').setView([44.7, 14.5], 9);
 
 var osm = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
 });
 
 map.addLayer(osm);
+
+var qgis = L.tileLayer.wms("/getmap", {
+    layers: 'DMR25 Sjenčanje',
+    format: 'image/png',
+    transparent: true
+});
+
+map.addLayer(qgis);
 </script>
 {% endblock %}
