--- a/django_project/sunlumo_mapserver/templates/mapview.html
+++ b/django_project/sunlumo_mapserver/templates/mapview.html
@@ -7,6 +7,8 @@
 {% endblock %}
 
 {% block extra_js %}
+<script type="text/javascript" src="/static/js/ol.js" charset="utf-8"></script>
+
 <script>
 
 proj4.defs("EPSG:3765","+proj=tmerc +lat_0=0 +lon_0=16.5 +k=0.9999 +x_0=500000 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs");
@@ -32,7 +34,8 @@ var map = new ol.Map({
             transparent:true,
             source: new ol.source.ImageWMS({
                 url: '/getmap',
-                params: {'LAYERS': 'DMR25 Sjenčanje', 'MAP':'/data/simple.qgs', 'VERSION':'1.1.1', 'FORMAT':'image/png'}
+                params: {'LAYERS': 'DMR25 Sjenčanje', 'MAP':'/data/simple.qgs', 'VERSION':'1.1.1', 'FORMAT':'image/png'},
+                ratio: 1.2
             })
         })
     ],
