--- a/django_project/lib_css/project.css
+++ b/django_project/lib_css/project.css
@@ -1,6 +1,16 @@
-html, body, #map {
+html, body {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
+}
+
+#map {
+    height: 100%;
+    margin: 0 0 0 15em;
+    padding: 0;
+}
+
+#sidebar {
+    width:15em;
 }
