Inject SL_Project details to the templates

--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -13,4 +13,10 @@
 
 <script src="{% static 'js/app.module.js' %}"></script>
 
+<script>
+
+new SL_Project({{ SL_Details|safe }});
+
+</script>
+
 {% endblock %}
