Add .layer class to the layer div

--- a/django_project/lib_css/project.css
+++ b/django_project/lib_css/project.css
@@ -24,9 +24,10 @@ div.layer_list {
   background:#ddd;
 }
 
-div.layer_list div {
+div.layer {
   padding: 10px;
   color: #666;
+  border: 1px red solid;
 }
 
 div.dragging {
