--- a/django_project/lib_css/project.css
+++ b/django_project/lib_css/project.css
@@ -6,13 +6,17 @@ html, body {
 }
 
 #map {
-    height: 100%;
-    margin: 0 0 0 15em;
+    position: fixed;
+    top: 45px;
+    bottom: 0px;
+    left: 300px;
+    right: 0px;
+    margin: 0;
     padding: 0;
 }
 
 #sidebar {
-    width:15em;
+    width:300px;
 }
 
 
