--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -2,10 +2,26 @@
 {% load staticfiles %}
 
 {% block content %}
+<!-- TOPBAR -->
+<nav class="top-bar" data-topbar role="navigation">
+    <ul class="title-area">
+        <li class="name">
+            <h1><a href="#">Sunlumo</a></h1>
+        </li>
+        <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
+</nav>
+<!-- END TOPBAR -->
 
-<div id="sidebar"></div>
+<!-- SIDEBAR -->
+<div id="sidebar">
+</div>
+<!-- END SIDEBAR -->
 
+<!-- MAP -->
 <div id='map'></div>
+<!-- END MAP -->
 
 {% endblock %}
 
