added search mockup to sidebar

--- a/django_project/lib_css/project.css
+++ b/django_project/lib_css/project.css
@@ -90,3 +90,13 @@ html, body {
 .deactivated {
   color: rgba(0,0,0,0.2) !important;
 }
+
+
+#panelSearch {
+  margin: 10px;
+  padding: 0;
+}
+
+#panelSearch .columns {
+  padding: 0 !important;
+}
