--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -25,7 +25,14 @@
         <li class="accordion-navigation">
             <a href="#panelSearch">Pretraživanje</a>
             <div id="panelSearch" class="content">
-                test
+                <div class="row">
+                    <div class="small-9 columns">
+                        <input type="text" id="right-label" placeholder="Upišite pojam za pretraživanje">
+                    </div>
+                    <div class="small-3 columns">
+                        <a href="#" class="button tiny">TRAŽI</a>
+                    </div>
+                </div>
             </div>
         </li>
         <li class="accordion-navigation">
