--- a/django_project/lib_css/project.css
+++ b/django_project/lib_css/project.css
@@ -87,6 +87,17 @@ html, body {
   color: #000;
   padding: 4px 5px 2px 0px;
 }
+
+#panelLayers div.group {
+  font-size: 16px;
+  color: #000;
+  padding: 4px 5px 2px 0px;
+}
+
+#panelLayers div.group .layer {
+  font-size: 12px;
+  color: #000;
+  padding: 4px 5px 2px 20px;
 }
 
 #panelLayers div.layer:hover {
