working on Distance tool

--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -25,20 +25,13 @@
         <li class="accordion-navigation">
             <a href="#panelSearch">Pretraživanje</a>
             <div id="panelSearch" class="content">
-                <div class="row">
-                    <div class="small-9 columns">
-                        <input type="text" id="right-label" placeholder="Upišite pojam za pretraživanje">
-                    </div>
-                    <div class="small-3 columns">
-                        <a href="#" class="button tiny">TRAŽI</a>
-                    </div>
-                </div>
+                test
             </div>
         </li>
         <li class="accordion-navigation">
             <a href="#panelTools">Alati</a>
             <div id="panelTools" class="content">
-                test
+                <div id="distanceToolControl" class="controlHolder"></div>
             </div>
         </li>
     </ul>
