--- a/django_project/lib_css/project.css
+++ b/django_project/lib_css/project.css
@@ -9,6 +9,29 @@ html, body {
   display: none;
 }
 
+.accordion .accordion-navigation > a, .accordion dd > a {
+  padding: 3px 5px;
+}
+
+.panel .heading {
+  position: relative;
+  clear: left;
+  width: 100%;
+  background-color: #333;
+  font-size: 14px;
+  color: #FFF;
+  padding: 3px 10px;
+  text-transform: uppercase;
+}
+
+.panel .content {
+  position: relative;
+  clear: left;
+  width: 100%;
+  padding: 3px;
+  border: solid 1px #333;
+}
+
 #map {
     position: fixed;
     top: 45px;
@@ -102,38 +125,31 @@ html, body {
 }
 
 
-#panelTools .toolbox-control {
-  height: 40px;
-  width: 75px;
-  background-color: #EEE;
-  border: solid 1px #000;
-  text-align: center;
-  vertical-align: center;
+#panelTools .controlHolder {
+  width: 100px;
+  position: relative;
+  float: left;
 }
 
-#panelTools .toolbox-control:hover {
-  background-color: #999;
-  cursor: pointer;
+#panelTools .button {
+  margin: 0;
+  padding: 5px 10px;
 }
 
-#panelTools .toolbox-control i {
-  font-size: 20px;
+#panelTools .button i {
+  font-size: 24px;
 }
 
-#panelTools .toolbox-control span {
-  font-size: 10px;
-}
-
-#panelTools .active {
-  background-color: #0F5;
+#panelTools .controlButton {
+  width: 65px;
 }
 
 #panelTools .toolbox-control-results {
-  width: 100px;
+  width: 200px;
   position: fixed;
   top: 56px;
   left: 350px;
-  background-color: #eee;
-  font-size: 12px;
-  border: solid 1px #555;
+  z-index: 2;
+  padding:0 !important;
+  border: none !important;
 }
