--- a/django_project/lib_css/project.css
+++ b/django_project/lib_css/project.css
@@ -153,3 +153,8 @@ html, body {
   padding:0 !important;
   border: none !important;
 }
+
+#panelTools .toolbox-control-results .item {
+  display: block;
+  font-size: 12px;
+}
