--- a/django_project/lib_css/project.css
+++ b/django_project/lib_css/project.css
@@ -90,15 +90,25 @@ html, body {
 
 #panelLayers div.group {
   font-size: 16px;
+  font-weight: bold;
   color: #000;
   padding: 4px 5px 2px 0px;
 }
 
 #panelLayers div.group .layer {
   font-size: 12px;
+  font-weight: normal;
   color: #000;
   padding: 4px 5px 2px 20px;
 }
+
+#panelLayers div.group-name {
+  margin-left: 4px;
+  display: inline-block;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
 
 #panelLayers div.layer:hover {
   background-color: #EEEEEE;
