--- a/django_project/lib_css/project.css
+++ b/django_project/lib_css/project.css
@@ -127,6 +127,19 @@ html, body {
   margin-left: 5px;
 }
 
+#panelLayers .group-control {
+  position: relative;
+  float: right;
+  clear: right;
+
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  color: #000;
+  line-height: 18px;
+  margin-left: 5px;
+}
+
 #panelLayers .layer-control:hover {
   color: #000;
 }
