--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -33,6 +33,11 @@
                 <div id="distanceToolControl" class="controlHolder"></div>
             </div>
         </li>
+        <li class="accordion-navigation">
+            <a href="#panelPrint">Print</a>
+            <div id="panelPrint" class="content">
+            </div>
+        </li>
     </ul>
 </div>
 <!-- END SIDEBAR -->
