--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -45,7 +45,7 @@
 <!-- MAP -->
 <div id='map'></div>
 <!-- END MAP -->
-
+<div id='resultsToolControl'></div>
 {% endblock %}
 
 {% block extra_js %}
