--- a/django_project/lib_css/project.css
+++ b/django_project/lib_css/project.css
@@ -5,6 +5,12 @@ html, body {
     height: 100%;
 }
 
+.logo {
+  height: 35px;
+  margin-right: 5px;
+  margin-top: 2px;
+}
+
 .hide {
   display: none;
 }
