--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -10,7 +10,11 @@
         </li>
         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-  </ul>
+    </ul>
+    <div class="right">
+        <div id="logo">
+        </div>
+    </div>
 </nav>
 <!-- END TOPBAR -->
 
