quick fix for distance tool and GFI results clash

--- a/django_project/lib_css/project.css
+++ b/django_project/lib_css/project.css
@@ -196,11 +196,19 @@ html, body {
 .toolbox-control-results {
   width: 200px;
   position: fixed;
-  top: 56px;
-  left: 350px;
   z-index: 2;
   padding:0 !important;
   border: none !important;
+}
+
+.GFITool {
+  top: 56px;
+  left: 350px;
+}
+
+.DistanceTool {
+  top: 56px;
+  right: 15px;
 }
 
 .toolbox-control-results .item {
