--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -50,6 +50,7 @@
 <div id='map'></div>
 <!-- END MAP -->
 <div id='resultsToolControl'></div>
+<div id='resultsDistanceToolControl'></div>
 {% endblock %}
 
 {% block extra_js %}
