Replace foundation icons with font awesome

--- a/django_project/sass/_base.scss
+++ b/django_project/sass/_base.scss
@@ -48,6 +48,7 @@
 @import "contrib/foundation/components/offcanvas";
 @import "contrib/foundation/components/visibility";
 
+// Font Awesome
 
 @import "contrib/font-awesome/variables";
 @import "contrib/font-awesome/mixins";
