--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -12,7 +12,7 @@
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
     </ul>
     <div class="right">
-        <div id="logo">
+        <div id="refresh-notification">
         </div>
     </div>
 </nav>
