Comment unsed foundation components

--- a/django_project/sass/_base.scss
+++ b/django_project/sass/_base.scss
@@ -10,46 +10,46 @@
 
 // Behold, here are all the Foundation components.
 @import "contrib/foundation/settings";
-@import "contrib/foundation/components/grid";
+// @import "contrib/foundation/components/grid";
 @import "contrib/foundation/components/accordion";
-@import "contrib/foundation/components/alert-boxes";
-@import "contrib/foundation/components/block-grid";
-@import "contrib/foundation/components/breadcrumbs";
-@import "contrib/foundation/components/button-groups";
+// @import "contrib/foundation/components/alert-boxes";
+// @import "contrib/foundation/components/block-grid";
+// @import "contrib/foundation/components/breadcrumbs";
+// @import "contrib/foundation/components/button-groups";
 @import "contrib/foundation/components/buttons";
-@import "contrib/foundation/components/clearing";
-@import "contrib/foundation/components/dropdown";
-@import "contrib/foundation/components/dropdown-buttons";
-@import "contrib/foundation/components/flex-video";
-@import "contrib/foundation/components/forms";
-@import "contrib/foundation/components/icon-bar";
-@import "contrib/foundation/components/inline-lists";
-@import "contrib/foundation/components/joyride";
-@import "contrib/foundation/components/keystrokes";
-@import "contrib/foundation/components/labels";
-@import "contrib/foundation/components/magellan";
-@import "contrib/foundation/components/orbit";
-@import "contrib/foundation/components/pagination";
+// @import "contrib/foundation/components/clearing";
+// @import "contrib/foundation/components/dropdown";
+// @import "contrib/foundation/components/dropdown-buttons";
+// @import "contrib/foundation/components/flex-video";
+// @import "contrib/foundation/components/forms";
+// @import "contrib/foundation/components/icon-bar";
+// @import "contrib/foundation/components/inline-lists";
+// @import "contrib/foundation/components/joyride";
+// @import "contrib/foundation/components/keystrokes";
+// @import "contrib/foundation/components/labels";
+// @import "contrib/foundation/components/magellan";
+// @import "contrib/foundation/components/orbit";
+// @import "contrib/foundation/components/pagination";
 @import "contrib/foundation/components/panels";
-@import "contrib/foundation/components/pricing-tables";
-@import "contrib/foundation/components/progress-bars";
-@import "contrib/foundation/components/range-slider";
-@import "contrib/foundation/components/reveal";
-@import "contrib/foundation/components/side-nav";
-@import "contrib/foundation/components/split-buttons";
-@import "contrib/foundation/components/sub-nav";
-@import "contrib/foundation/components/switches";
-@import "contrib/foundation/components/tables";
-@import "contrib/foundation/components/tabs";
-@import "contrib/foundation/components/thumbs";
-@import "contrib/foundation/components/tooltips";
+// @import "contrib/foundation/components/pricing-tables";
+// @import "contrib/foundation/components/progress-bars";
+// @import "contrib/foundation/components/range-slider";
+// @import "contrib/foundation/components/reveal";
+// @import "contrib/foundation/components/side-nav";
+// @import "contrib/foundation/components/split-buttons";
+// @import "contrib/foundation/components/sub-nav";
+// @import "contrib/foundation/components/switches";
+// @import "contrib/foundation/components/tables";
+// @import "contrib/foundation/components/tabs";
+// @import "contrib/foundation/components/thumbs";
+// @import "contrib/foundation/components/tooltips";
 @import "contrib/foundation/components/top-bar";
 @import "contrib/foundation/components/type";
-@import "contrib/foundation/components/offcanvas";
-@import "contrib/foundation/components/visibility";
+// @import "contrib/foundation/components/offcanvas";
+// @import "contrib/foundation/components/visibility";
+
 
 // Font Awesome
-
 @import "contrib/font-awesome/variables";
 @import "contrib/font-awesome/mixins";
 @import "contrib/font-awesome/path";
