--- a/django_project/sass/_fa_fonts.scss
+++ b/django_project/sass/_fa_fonts.scss
@@ -10,3 +10,4 @@
 .#{$fa-css-prefix}-info-circle:before { content: $fa-var-info-circle; }
 .#{$fa-css-prefix}-cog:before { content: $fa-var-cog; }
 .#{$fa-css-prefix}-refresh:before { content: $fa-var-refresh; }
+.#{$fa-css-prefix}-times-circle:before { content: $fa-var-times-circle; }
