Set page title for demo project

--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
+{% block title%} Sunlumo Demo project {% endblock title%}
+
 {% block content %}
 <!-- TOPBAR -->
 <nav class="top-bar" data-topbar role="navigation">
