Move search results to the panel

--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -31,6 +31,7 @@
 <!-- END MAP -->
 <div id='resultsToolControl'></div>
 <div id='resultsDistanceToolControl'></div>
+<div id='similaritySearchResults'></div>
 {% endblock %}
 
 {% block extra_js %}
