Add Polygon measure tool

--- a/django_project/sass/_fa_fonts.scss
+++ b/django_project/sass/_fa_fonts.scss
@@ -11,3 +11,4 @@
 .#{$fa-css-prefix}-cog:before { content: $fa-var-cog; }
 .#{$fa-css-prefix}-refresh:before { content: $fa-var-refresh; }
 .#{$fa-css-prefix}-times-circle:before { content: $fa-var-times-circle; }
+.#{$fa-css-prefix}-arrows-v:before { content: $fa-var-arrows-v; }
