Move PrintControl to the toolbox

--- a/django_project/sass/_fa_fonts.scss
+++ b/django_project/sass/_fa_fonts.scss
@@ -12,3 +12,4 @@
 .#{$fa-css-prefix}-refresh:before { content: $fa-var-refresh; }
 .#{$fa-css-prefix}-times-circle:before { content: $fa-var-times-circle; }
 .#{$fa-css-prefix}-arrows-v:before { content: $fa-var-arrows-v; }
+.#{$fa-css-prefix}-print:before { content: $fa-var-print; }
