Add getfeatureinfoAllVisible control

--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -30,6 +30,7 @@
 <div id='map'></div>
 <!-- END MAP -->
 <div id='resultsToolControl'></div>
+<div id='resultsToolControlAllVisible'></div>
 <div id='printControlPanel'></div>
 <div id='similaritySearchResults'></div>
 {% endblock %}
