--- a/django_project/sass/_fa_fonts.scss
+++ b/django_project/sass/_fa_fonts.scss
@@ -13,3 +13,4 @@
 .#{$fa-css-prefix}-times-circle:before { content: $fa-var-times-circle; }
 .#{$fa-css-prefix}-arrows-v:before { content: $fa-var-arrows-v; }
 .#{$fa-css-prefix}-print:before { content: $fa-var-print; }
+.#{$fa-css-prefix}-magic:before { content: $fa-var-magic; }
