Use project title and description in templates

--- a/django_project/sass/project.scss
+++ b/django_project/sass/project.scss
@@ -28,6 +28,10 @@
   display: none !important;
 }
 
+.project-logo {
+    height: rem-calc(45);
+}
+
 .sl-accordion {
     @include accordion-container();
     .accordion-navigation {
