--- a/django_project/sunlumo_webclient/templates/index.html
+++ b/django_project/sunlumo_webclient/templates/index.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
-{% block title%} Sunlumo Demo project {% endblock title%}
+{% block title%} {{ SL_Project.title }} {% endblock title%}
 
 {% block content %}
 <!-- TOPBAR -->
 <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
-        <li class="name">
-            <h1><a href="#">Sunlumo</a></h1>
+        {% if SL_Project.logo %}
+        <li class="left logo">
+            <img class="project-logo" src='{{ MEDIA_URL }}{{SL_Project.logo}}'>
+        </li>
+        <li class="left divider"></li>
+        {% endif %}
+        <li class="left name">
+            <h1><a>{{ SL_Project.title }}</a></h1>
         </li>
         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
