Some style updates, bigger sidebar, smaller font

--- a/django_project/sass/project.scss
+++ b/django_project/sass/project.scss
@@ -29,7 +29,8 @@
 }
 
 .project-logo {
-    height: rem-calc(45);
+    margin-top: 1px;
+    height: rem-calc(43);
 }
 
 .sl-accordion {
@@ -114,7 +115,7 @@
 
 
     .layer {
-        font-size: rem-calc(12);
+        font-size: rem-calc(11);
         color: $black;
         padding: rem-calc(4) rem-calc(5) rem-calc(2) 0;
 
@@ -124,7 +125,7 @@
     }
 
     .group {
-        font-size: rem-calc(16);
+        font-size: rem-calc(12);
         font-weight: bold;
         color: $black;
         padding: rem-calc(4) rem-calc(5) rem-calc(2) 0;
@@ -134,7 +135,7 @@
         }
 
         .layer {
-            font-size: rem-calc(12);
+            font-size: rem-calc(11);
             font-weight: normal;
             color: $black;
             padding: rem-calc(4) rem-calc(5) rem-calc(2) rem-calc(20);
