--- a/django_project/sass/project.scss
+++ b/django_project/sass/project.scss
@@ -23,6 +23,10 @@
     }
 }
 
+.ol-attribution img {
+    width: rem-calc(88);
+    height: rem-calc(23);
+}
 
 .hide {
   display: none !important;
